# ai-core

./: .clang-tidy  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  README_EN.md
assets/: CMakeLists.txt
assets/conf/: ocr_det_ort.json  ocr_rec_ort.json  test_algo_manager_ncnn.json  test_algo_manager_ort.json  test_algo_manager_trt.json
assets/data/ocr_reco/: chinese_cht_dict.txt
assets/enc_models/: yolov11n_trt_fp16.enc.engine
assets/models/: ch_PP_ocr_det.onnx  cnocr136fc.onnx  cnocr136fc_fp16_dynamic.engine  seg_with_mask.onnx  yolov11n_trt_fp16.engine
benchmarks/: CMakeLists.txt  main.cc  trt_infer_bench.cpp  yolo_infer_bench.cpp  yolo_postproc_bench.cpp  yolo_preproc_bench.cpp
benchmarks/baseline/: README.md  v1.5-x86_64.json  v1.6-x86_64.json
examples/: CMakeLists.txt  algo_config_parser.cpp  algo_config_parser.hpp  generic_image_infer.cpp  generic_image_infer.hpp
examples/async_pipeline/: CMakeLists.txt  README.md  async_pipeline_main.cpp
examples/ocr/: CMakeLists.txt  ocr_main.cc  ocr_rec.cpp  ocr_rec.hpp  ocr_utils.cpp  ocr_utils.hpp
examples/starter/: CMakeLists.txt  README.md  main.cpp
resources/: CMakeLists.txt
resources/conf/: test_algo_manager_ncnn.json  test_algo_manager_ort.json  test_algo_manager_trt.json
src/: CMakeLists.txt  algo_infer.cpp  algo_infer_base.hpp  algo_infer_engine.cpp  algo_infer_engine_impl.cpp  algo_infer_engine_impl.hpp  algo_infer_impl.cpp  algo_infer_impl.hpp  algo_manager.cpp  algo_manager.hpp  algo_manager_impl.cpp  algo_manager_impl.hpp  algo_postproc.cpp  algo_postproc_impl.cpp  algo_postproc_impl.hpp  algo_preproc.cpp  algo_preproc_impl.cpp  algo_preproc_impl.hpp  algo_registrar.cpp  algo_registrar.hpp  device_buffer_impl_stub.cpp  fpr_cls.cpp  fpr_cls.hpp  fpr_feat.cpp  fpr_feat.hpp  infer.cpp  infer.hpp  infer_base.cpp  infer_base.hpp  infer_types.hpp  infer_wrapper.hpp  iou_associator.cpp  iou_associator.hpp  logger.cpp  nano_det.cpp  nano_det.hpp  param_validation.hpp  pinned_host_buffer_impl_stub.cpp  postproc_base.hpp  preproc_base.hpp  (+18 more)
src/api/: CMakeLists.txt  ai_export.h  ai_sdk.h  ai_types.h
src/api/ai_core/: accelerator_buffer_impl.hpp  ai_core_registrar.hpp  ai_core_version.hpp  algo_data_types.hpp  algo_infer.hpp  algo_infer_base.hpp  algo_infer_engine.hpp  algo_inference.hpp  algo_input_types.hpp  algo_manager.hpp  algo_output_types.hpp  algo_postproc.hpp  algo_postprocessor.hpp  algo_preproc.hpp  algo_preprocessor.hpp  algo_types.hpp  common_types.hpp  data_packet.hpp  default_plugins.hpp  device_buffer_impl.hpp  error_code.hpp  execution_context.hpp  i_accelerator_buffer.hpp  i_execution_context.hpp  i_infer_engine.hpp  i_postprocess.hpp  i_preprocess.hpp  image_view.hpp  infer_async.hpp  infer_base.hpp  infer_common_types.hpp  logger.hpp  (+21 more)
src/cmake/: ai_core-config.cmake.in
src/common/: version.hpp
src/config/: algo_config.cpp
src/core/: CMakeLists.txt  algo_manager.cpp  algo_registrar.cpp  algo_registrar.hpp  fpr_cls.cpp  fpr_feat.cpp  infer_types.hpp  nano_det.cpp  rtm_det.cpp  softmax_cls.cpp  vision_infer.cpp  vision_registrar.cpp  vision_registrar.hpp  vision_util.cpp  vision_util.hpp  yolo_det.cpp
src/ncnn/: CMakeLists.txt  dnn_infer.cpp  dnn_infer.hpp  frame_infer.cpp  frame_infer.hpp  ncnn_generic_preprocessor.cpp  ncnn_generic_preprocessor.hpp  ncnn_image_preprocessor.cpp  ncnn_image_preprocessor.hpp  ncnn_infer.cpp  ncnn_infer.hpp
src/ort/: CMakeLists.txt  dnn_infer.cpp  dnn_infer.hpp  frame_infer.cpp  frame_infer.hpp  ort_infer.cpp  ort_infer.hpp
src/postproc/: anchor_det_post_base.hpp  anchor_det_postproc.cpp  anchor_det_postproc.hpp  b_diag_spec.cpp  b_diag_spec.hpp  confidence_filter_post_base.hpp  confidence_filter_postproc.cpp  confidence_filter_postproc.hpp  cv_generic_post_base.hpp  cv_generic_postproc.cpp  cv_generic_postproc.hpp  fpr_cls.cpp  fpr_cls.hpp  fpr_feat.cpp  fpr_feat.hpp  frame_postproc_base.hpp  nano_det.cpp  nano_det.hpp  ocr_reco.cpp  ocr_reco.hpp  raw_feature.cpp  raw_feature.hpp  raw_output.cpp  raw_output.hpp  rtm_det.cpp  rtm_det.hpp  semantic_seg.cpp  semantic_seg.hpp  softmax_cls.cpp  softmax_cls.hpp  t_diag_spec.cpp  t_diag_spec.hpp  unet_daul_out_seg.cpp  unet_daul_out_seg.hpp  unet_dual_out_seg.cpp  unet_dual_out_seg.hpp  yolo_det.cpp  yolo_det.hpp
src/preproc/: cpu_generic_preprocess.hpp  cpu_generic_preprocessor.cpp  cpu_generic_preprocessor.hpp  cpu_image_preprocessor.cpp  cpu_image_preprocessor.hpp  cuda_generic_preprocess.hpp  frame_prep.cpp  frame_prep.hpp  frame_preprocessor_base.hpp  frame_with_mask_prep.cpp  frame_with_mask_prep.hpp  generic_frame_preproc_base.cpp  generic_frame_preproc_base.hpp  opencv_image_preprocessor.cpp  opencv_image_preprocessor.hpp
src/registrar/: default_plugins.cpp  infer_engine_registrar.cpp  infer_engine_registrar.hpp  postproc_registrar.cpp  postproc_registrar.hpp  preproc_registrar.cpp  preproc_registrar.hpp
src/trt/: CMakeLists.txt  cuda_accelerator_buffer_impl.cu  cuda_device_buffer.cuh  cuda_helper.cuh  cuda_host_buffer.cuh  cuda_pinned_host_buffer_impl.cu  cuda_stream.cuh  cuda_utils.cu  cuda_utils.hpp  device_buffer_impl.cu  dnn_infer.cpp  dnn_infer.hpp  gpu_buffer_impl.cu  gpu_buffer_impl.hpp  gpu_generic_cuda_preprocessor.cu  gpu_generic_cuda_preprocessor.hpp  trt_device_buffer.cu  trt_device_buffer.hpp  trt_infer.cpp  trt_infer.hpp  trt_infer_stream.cpp  trt_infer_stream.hpp  trt_utils.cpp  trt_utils.hpp
src/types/: algo_output_types.hpp  infer_common_types.hpp  infer_params_types.hpp  postprocess_types.hpp  typed_buffer.hpp
tests/: CMakeLists.txt  taskflow_hw.cpp  test_algo_infer.cpp  test_algo_manager.cpp  test_config.cpp  test_core_types.cpp  test_diag_spec.cpp  test_image_view.cpp  test_model_encrypt.cpp  test_ocr_det.cpp  test_ocr_reco.cpp  test_postproc_decode.cpp  test_preproc_cpu.cpp  test_seg_with_mask.cpp  test_tensor_data.cpp  test_topk_heap.cpp  test_tracker.cpp  test_trt_infer.cpp  test_typed_buffer.cpp  test_vision_util.cpp  test_yolo_det.cpp  tsan.supp
tests/conf/: test_algo_manager_ncnn.json  test_algo_manager_ort.json
(+27 files in other folders)
