CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(Resources)

IF(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/data")
    INSTALL(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/data" DESTINATION ./assets)
ENDIF()

IF(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/conf")
    INSTALL(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/conf" DESTINATION ./assets)
ENDIF()

IF(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/enc_models")
    INSTALL(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/enc_models" DESTINATION ./assets)
ENDIF()

IF(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/models")
    INSTALL(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/models" DESTINATION ./assets)
ENDIF()
