CMAKE_MINIMUM_REQUIRED(VERSION 3.16)

PROJECT(AICoreExamples VERSION ${AI_CORE_VERSION})

SET(CMAKE_POSITION_INDEPENDENT_CODE ON)

SET(COMMIT_CODE "689bc3e3bdf1c5f2cff81725011ba7d3c0089b25")
ADD_DEFINITIONS(-DSECURITY_KEY="${COMMIT_CODE}")

LOAD_OPENCV()

FILE(GLOB CURRENT_DIR_SRCS 
	${CMAKE_CURRENT_SOURCE_DIR}/*.cpp 
)

SET(DEPENDENCY_INCLUDES
	${PROJECT_INCLUDE_DIR}
	${OpenCV_INCLUDE_DIRS}
)

SET(DEPENDENCY_LIBS
	ai_core::ai_core
	logger::logger
	${OpenCV_LIBS}
)

ADD_LIBRARY(ai_core_examples STATIC ${CURRENT_DIR_SRCS})

ADD_LIBRARY(ai_core::ai_core_examples ALIAS ai_core_examples)

TARGET_INCLUDE_DIRECTORIES(ai_core_examples 
	PRIVATE
		$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
		${DEPENDENCY_INCLUDES}
)

TARGET_LINK_LIBRARIES(ai_core_examples PRIVATE ${DEPENDENCY_LIBS})

INSTALL(TARGETS ai_core_examples
    EXPORT ai_export_set
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} COMPONENT lib
    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR} COMPONENT lib
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR} COMPONENT bin
)

ADD_SUBDIRECTORY(ocr)
